adjust z-index since on safari its bugged

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 
 .content-overlay {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   min-height: 100vh;
   height: auto;
@@ -60,12 +60,12 @@ body {
   border-radius: 4px;
   filter: url(#staticPaperDistortion);
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 #nestedParentContainer > .content-layer {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     /* width: 100%; */
     height: auto;
     padding: 2rem 2.5rem;
@@ -196,7 +196,7 @@ body {
 .project-article-jaggy > .content-layer {
     padding: 1.5rem;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 .project-article-jaggy article {
     width: 100%;
@@ -279,7 +279,7 @@ body {
 .skill-item-jaggy .content-layer {
     position: relative;
     padding: 0;
-    z-index: 2;
+    z-index: 3;
     display: flex;
     align-items: center;
     justify-content: center;
